// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoleDropdown renders a button with existing role if given for resource type file 1`] = `
<span class="oc-flex oc-flex-middle"><oc-button-stub appearance="raw" arialabel="Select permission" class="files-recipient-role-select-btn" disabled="false" gapsize="none" id="files-collaborators-role-button-new" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"><!--v-if-->
    <span class="oc-text-truncate">Can view</span>
    <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="arrow-down-s" size="medium" type="span" variation="passive"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-7" isnested="false" mode="click" offset="0" paddingsize="small" popperoptions="[object Object]" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list" raw="false">
      <li>
        <oc-button-stub appearance="raw-inverse" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-viewer" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="primary">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="eye" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><oc-icon-stub accessiblelabel="" color="" filltype="fill" name="check" size="medium" type="span" variation="inherit"></oc-icon-stub></span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-editor" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="passive">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="pencil" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><!--v-if--></span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-custom" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="passive">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="settings-3" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><!--v-if--></span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" closeonclick="false" dropid="oc-drop-8" isnested="false" mode="manual" paddingsize="remove" popperoptions="[object Object]" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub raw="false">
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" hidelabel="false" id="files-collaborators-permission-read" label="View" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-create" label="Create" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-delete" label="Delete" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub appearance="outline" class="files-recipient-custom-permissions-drop-cancel" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="small" submit="button" type="button" variation="passive">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="files-recipient-custom-permissions-drop-confirm oc-ml-s" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="small" submit="button" type="button" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;

exports[`RoleDropdown renders a button with existing role if given for resource type folder 1`] = `
<span class="oc-flex oc-flex-middle"><oc-button-stub appearance="raw" arialabel="Select permission" class="files-recipient-role-select-btn" disabled="false" gapsize="none" id="files-collaborators-role-button-new" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"><!--v-if-->
    <span class="oc-text-truncate">Can view</span>
    <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="arrow-down-s" size="medium" type="span" variation="passive"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-5" isnested="false" mode="click" offset="0" paddingsize="small" popperoptions="[object Object]" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list" raw="false">
      <li>
        <oc-button-stub appearance="raw-inverse" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-viewer" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="primary">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="eye" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><oc-icon-stub accessiblelabel="" color="" filltype="fill" name="check" size="medium" type="span" variation="inherit"></oc-icon-stub></span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-editor" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="passive">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="pencil" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><!--v-if--></span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-custom" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="passive">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="settings-3" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><!--v-if--></span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" closeonclick="false" dropid="oc-drop-6" isnested="false" mode="manual" paddingsize="remove" popperoptions="[object Object]" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub raw="false">
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" hidelabel="false" id="files-collaborators-permission-read" label="View" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-create" label="Create" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-delete" label="Delete" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub appearance="outline" class="files-recipient-custom-permissions-drop-cancel" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="small" submit="button" type="button" variation="passive">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="files-recipient-custom-permissions-drop-confirm oc-ml-s" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="small" submit="button" type="button" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;

exports[`RoleDropdown renders a button with invite text if no existing role given for resource type file 1`] = `
<span class="oc-flex oc-flex-middle"><oc-button-stub appearance="raw" arialabel="Select permission" class="files-recipient-role-select-btn" disabled="false" gapsize="none" id="files-collaborators-role-button-new" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"><!--v-if-->
    <span class="oc-text-truncate">Can view</span>
    <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="arrow-down-s" size="medium" type="span" variation="passive"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-3" isnested="false" mode="click" offset="0" paddingsize="small" popperoptions="[object Object]" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list" raw="false">
      <li>
        <oc-button-stub appearance="raw-inverse" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-viewer" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="primary">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="eye" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><oc-icon-stub accessiblelabel="" color="" filltype="fill" name="check" size="medium" type="span" variation="inherit"></oc-icon-stub></span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-editor" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="passive">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="pencil" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><!--v-if--></span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-custom" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="passive">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="settings-3" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><!--v-if--></span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" closeonclick="false" dropid="oc-drop-4" isnested="false" mode="manual" paddingsize="remove" popperoptions="[object Object]" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub raw="false">
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" hidelabel="false" id="files-collaborators-permission-read" label="View" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub appearance="outline" class="files-recipient-custom-permissions-drop-cancel" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="small" submit="button" type="button" variation="passive">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="files-recipient-custom-permissions-drop-confirm oc-ml-s" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="small" submit="button" type="button" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;

exports[`RoleDropdown renders a button with invite text if no existing role given for resource type folder 1`] = `
<span class="oc-flex oc-flex-middle"><oc-button-stub appearance="raw" arialabel="Select permission" class="files-recipient-role-select-btn" disabled="false" gapsize="none" id="files-collaborators-role-button-new" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"><!--v-if-->
    <span class="oc-text-truncate">Can view</span>
    <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="arrow-down-s" size="medium" type="span" variation="passive"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-1" isnested="false" mode="click" offset="0" paddingsize="small" popperoptions="[object Object]" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list" raw="false">
      <li>
        <oc-button-stub appearance="raw-inverse" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-viewer" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="primary">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="eye" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><oc-icon-stub accessiblelabel="" color="" filltype="fill" name="check" size="medium" type="span" variation="inherit"></oc-icon-stub></span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-editor" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="passive">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="pencil" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><!--v-if--></span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" disabled="false" gapsize="medium" id="files-recipient-role-drop-btn-custom" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" variation="passive">
          <span class="oc-flex oc-flex-middle"><oc-icon-stub accessiblelabel="" class="oc-pl-s oc-pr-m" color="" filltype="fill" name="settings-3" size="medium" type="span" variation="inherit"></oc-icon-stub> <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub></span>
          <span class="oc-flex"><!--v-if--></span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" closeonclick="false" dropid="oc-drop-2" isnested="false" mode="manual" paddingsize="remove" popperoptions="[object Object]" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub raw="false">
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" hidelabel="false" id="files-collaborators-permission-read" label="View" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-create" label="Create" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-delete" label="Delete" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="false" hidelabel="false" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" outline="false" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub appearance="outline" class="files-recipient-custom-permissions-drop-cancel" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="small" submit="button" type="button" variation="passive">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="files-recipient-custom-permissions-drop-confirm oc-ml-s" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="small" submit="button" type="button" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;
